add update function for ovta workflow
